[project]
name = "rabbitpy"
version = "3.0.0"
description = "A pure python, thread-safe, minimalistic and pythonic RabbitMQ client library"
readme = "README.rst"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [ { name = "Gavin M. Roy", email = "gavinmroy@gmail.com" } ]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Communications",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries"
]
dependencies = [
  "pamqp>=3.0,<4.0",
]

[project.optional-dependencies]
dev = [
    "codeclimate-test-reporter",
    "codecov",
    "coverage[toml]",
    "mock",
    "ruff"
]

[project.urls]
Documentation = "https://rabbitpy.readthedocs.io"
Repository = "https://github.com/gmr/rabbitpy.git"
"Code Coverage" = "https://app.codecov.io/github/gmr/rabbitpy"

[tool.ruff]
line-length = 79
target-version = "py39"

[tool.ruff.lint]
select = [
    "ASYNC",    # flake8-async
    "B",        # flake8-bugbear
    "BLE",      # flake8-blind-except
    "C4",       # flake8-comprehensions
    "DTZ",      # flake8-datetimez
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "G",        # flake8-logging-format
    "I",        # isort
    "S",        # flake8-bandit
    "T20",      # flake8-print
    "UP",       # pyupgrade
]
exclude = [
    "examples/*.py"
]

[tool.coverage.xml]
output = "build/coverage.xml"

[tool.coverage.run]
branch = true
source = ["rabbitpy"]
command_line = "-m unittest discover tests --buffer --verbose"
