[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rabbitpy"
version = "3.0.0"
description = "A pure python, thread-safe, minimalistic and pythonic RabbitMQ client library"
readme = "README.rst"
requires-python = ">=3.11"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
    {name = "Gavin M. Roy", email = "gavinmroy@gmail.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Communications",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
keywords = ["rabbitmq", "amqp", "messaging"]
dependencies = ["pamqp>=3.0,<4.0"]

[project.urls]
Homepage = "https://github.com/gmr/rabbitpy"
Documentation = "https://rabbitpy.readthedocs.io"

[dependency-groups]
dev = [
    "build",
    "coverage[toml]",
    "pre-commit",
    "ruff",
]
docs = [
    "mkdocs>=1.5,<2",
    "mkdocs-material>=9.5,<10",
    "mkdocstrings[python]",
]

[tool.coverage.run]
branch = true
command_line = "-m unittest discover tests --buffer --verbose"
data_file = "build/.coverage"
source = ["rabbitpy"]

[tool.coverage.report]
show_missing = true
exclude_also = [
    "typing.TYPE_CHECKING",
]

[tool.coverage.html]
directory = "build/coverage"

[tool.coverage.xml]
output = "build/coverage.xml"

[tool.hatch.build.targets.wheel]
include = ["rabbitpy"]

[tool.ruff]
line-length = 79
target-version = "py311"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
    "BLE",   # flake8-blind-except
    "C4",    # flake8-comprehensions
    "C90",   # mccabe
    "E", "W", # pycodestyle
    "F",     # pyflakes
    "G",     # flake8-logging-format
    "I",     # isort
    "N",     # pep8-naming
    "Q",     # flake8-quotes
    "S",     # flake8-bandit
    "ASYNC", # flake8-async
    "B",     # flake8-bugbear
    "DTZ",   # flake8-datetimez
    "FURB",  # refurb
    "RUF",   # ruff-specific
    "T20",   # flake8-print
    "UP",    # pyupgrade
]
ignore = [
    "N818",  # exception class names not required to end in Error
    "RSE",   # contradicts Python Style Guide
    "UP040", # allow non-PEP695 type alias syntax
]
flake8-quotes = {inline-quotes = "single"}

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N802", "S"]
"examples/**/*.py" = ["S", "T20"]
